Feat: Creates unit testing with 100% coverage for recommendationsService.ts archive

--- a/back-end/package.json
+++ b/back-end/package.json
@@ -8,7 +8,7 @@
     "dev:test": "dotenv -e .env.test nodemon src/server.ts",
     "dev": "nodemon src/server.ts",
     "test": "dotenv -e .env.test prisma migrate dev && NODE_OPTIONS=--experimental-vm-modules dotenv -e .env.test jest -- -i",
-    "test:unit": "dotenv -e .env.test jest -- -i --coverage --testPathPattern=tests/unit"
+    "test:unit": "dotenv -e .env.test cross-env NODE_OPTIONS=--experimental-vm-modules jest -- -i --coverage --testPathPattern=tests/unit"
   },
   "keywords": [],
   "author": "",
@@ -22,6 +22,7 @@
     "@types/joi": "^17.2.3",
     "@types/node": "^16.3.3",
     "@types/supertest": "^2.0.11",
+    "cross-env": "^7.0.3",
     "dotenv-cli": "^5.1.0",
     "eslint": "^7.32.0",
     "jest": "^28.1.3",
