--- a/back-end/package.json
+++ b/back-end/package.json
@@ -8,7 +8,7 @@
     "dev:test": "dotenv -e .env.test nodemon src/server.ts",
     "dev": "nodemon src/server.ts",
     "test": "dotenv -e .env.test prisma migrate dev && NODE_OPTIONS=--experimental-vm-modules dotenv -e .env.test jest -- -i",
-    "test:unit": "dotenv -e .env.test cross-env NODE_OPTIONS=--experimental-vm-modules jest -- -i --coverage --testPathPattern=tests/unit"
+    "test:unit": "dotenv -e .env.test cross-env NODE_OPTIONS=--experimental-vm-modules jest -- -i --coverage --collectCoverageFrom ./src/services/recommendationsService.ts --testPathPattern=tests/unit" 
   },
   "keywords": [],
   "author": "",
